--- a/analysis.qmd
+++ b/analysis.qmd
@@ -136,3 +136,6 @@ p3 <- create_scatterplot(data, "Gentoo", "#9a6fb0")
 
 p1 + p2 + p3
 ```
+
+# New header
+Adding a new paragraph here to test commit.
